--- a/e-mail-b0mb3r/b0mb3r.html
+++ b/e-mail-b0mb3r/b0mb3r.html
@@ -19,7 +19,7 @@ alert('NO INTERNET CONNECTION AVAILABLE.\n\nCheck your settings and reload this 
       <td style="padding-right: 6pt; padding-left: 6pt; padding-bottom: 6pt; padding-top: 6pt"><br>
 <center><table border=0 cellpadding=3 cellspacing=0><tr><td>
     <p style="margin:0cm;margin-bottom:.0001pt;line-height:115%">
-    <span style="font-size:9.0pt;font-family:verdana;">Укажите почту для спама, будет отправлено несколько тысяч писем<br>После нажатия кнопки страница может подвиснуть ненадолго, не закрывайте вкладку. <br>(Пример: lovec@gmail.com)</p>
+    <span style="font-size:9.0pt;font-family:verdana;">Type spam mailbox, several thousand letters will be sent<br>After clicking the button, the page may freeze for a second, DO NOT CLOSE THE TAB.<br>(Example: lovec@gmail.com)</p>
 </td></tr></table>
 	<script type="text/javascript">
 		spam = function() {
@@ -213,7 +213,7 @@ document.write("<iframe frameborder='0' src='http://lists.umanitoba.ca/mailman/s
 
 <table style="background: #bed5e2; width: 317.5pt; border-collapse: collapse; mso-padding-alt: 6.0pt 6.0pt 6.0pt 6.0pt" cellspacing=0 cellpadding=0 width=690 align=center bgcolor=#bed5e2 border=0>
   <tbody><tr><td style="border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 450pt; padding-top: 6pt; border-bottom: medium none">
-      <center><p><b><span style="font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb">Copyright 2013-2018 Privateloader.<br> Модификация : Aleksey для ТОННЫШИПА <span></center></b>
+      <center><p><b><span style="font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb">Copyright 2018-2020 <br> Created by <a href="https://github.com/varvaruk-v">varvaruk-v</a> <br> Follow me on <a href="https://github.com/varvaruk-v">GitHub</a> <span></center></b>
 </td></tr>
 </tr></tbody></div></div>
 </table>
