--- a/e-mail-b0mb3r/b0mb3r.html
+++ b/e-mail-b0mb3r/b0mb3r.html
@@ -25,10 +25,10 @@ alert('NO INTERNET CONNECTION AVAILABLE.\n\nCheck your settings and reload this 
 		spam = function() {
 			var spam_id = escape(document.getElementById('spam_id').value);
 			if(spam_id == "") {
-				alert('Почта не указана');
+				alert('Wright E-Mail!');
 				return false;
 			}
-			document.write("<html><head><title>Email SPAM</title><meta http-equiv=content-type content='text/html; charset=iso-8859-1'></head><body bgcolor=#5e717f><br><table style='background: #bed5e2;' cellspacing=0 cellpadding=0 align=center><tbody><tr><td style='border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 317.5pt; padding-top: 6pt; '><p><b><span style='font-size: 10pt; color: #ff9900; font-family: verdana; mso-ansi-language: en-gb'>Email SPAM</span></b></p></td></tr><tr></td></tr><tr><td style='padding-right: 6pt; padding-left: 6pt; padding-bottom: 6pt; padding-top: 6pt'><br><center><table border=0 cellpadding=3 cellspacing=0><tr><td><p style='margin:0cm;margin-bottom:.0001pt;line-height:115%'><span style='font-size:9.0pt;font-family:verdana;'>Спамим ящик: "+spam_id+".<br>Не закрывайте вкладку минут 10. </p></td></tr></table><br>");
+			document.write("<html><head><title>Email SPAM</title><meta http-equiv=content-type content='text/html; charset=iso-8859-1'></head><body bgcolor=#5e717f><br><table style='background: #bed5e2;' cellspacing=0 cellpadding=0 align=center><tbody><tr><td style='border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 317.5pt; padding-top: 6pt; '><p><b><span style='font-size: 10pt; color: #ff9900; font-family: verdana; mso-ansi-language: en-gb'>Email SPAM</span></b></p></td></tr><tr></td></tr><tr><td style='padding-right: 6pt; padding-left: 6pt; padding-bottom: 6pt; padding-top: 6pt'><br><center><table border=0 cellpadding=3 cellspacing=0><tr><td><p style='margin:0cm;margin-bottom:.0001pt;line-height:115%'><span style='font-size:9.0pt;font-family:verdana;'>Spaming box: "+spam_id+".<br>Do not close the page for 10 minutes. </p></td></tr></table><br>");
 			for(i = 0; i < 100; i++){
            
 		   
