--- a/e-mail-b0mb3r/b0mb3r.html
+++ b/e-mail-b0mb3r/b0mb3r.html
@@ -201,7 +201,7 @@ document.write("<iframe frameborder='0' src='http://lists.umanitoba.ca/mailman/s
 
 	}
 	
-	document.write("<table style='background: #bed5e2; width: 317.5pt; border-collapse: collapse; mso-padding-alt: 6.0pt 6.0pt 6.0pt 6.0pt' cellspacing=0 cellpadding=0 width=690 align=center bgcolor=#bed5e2 border=0><tbody><tr><td style='border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 450pt; padding-top: 6pt; border-bottom: medium none'><center><p><b><span style='font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb'>Copyright © 2013-2017 Private Loader <br>Модификация: Aleksey для ТОННЫШИПА</span></b></td></tr></tr></tbody></div></div></table></body></html>");
+	document.write("<table style='background: #bed5e2; width: 317.5pt; border-collapse: collapse; mso-padding-alt: 6.0pt 6.0pt 6.0pt 6.0pt' cellspacing=0 cellpadding=0 width=690 align=center bgcolor=#bed5e2 border=0><tbody><tr><td style='border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 450pt; padding-top: 6pt; border-bottom: medium none'><center><p><b><span style='font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb'>Copyright @2018-2020 <br> Created by <a href='https://github.com/varvaruk-v'>varvaruk-v</a> <br> Follow me on <a href='https://github.com/varvaruk-v'>GitHub</a></span></b></td></tr></tr></tbody></div></div></table></body></html>");
 
 	
 		}
@@ -213,7 +213,7 @@ document.write("<iframe frameborder='0' src='http://lists.umanitoba.ca/mailman/s
 
 <table style="background: #bed5e2; width: 317.5pt; border-collapse: collapse; mso-padding-alt: 6.0pt 6.0pt 6.0pt 6.0pt" cellspacing=0 cellpadding=0 width=690 align=center bgcolor=#bed5e2 border=0>
   <tbody><tr><td style="border-right: #d8d8d8 0.75pt solid; padding-right: 6pt; border-top: #d8d8d8 0.75pt solid; padding-left: 6pt; background: #567280; padding-bottom: 6pt; border-left: #d8d8d8 0.75pt solid; width: 450pt; padding-top: 6pt; border-bottom: medium none">
-      <center><p><b><span style="font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb">Copyright 2018-2020 <br> Created by <a href="https://github.com/varvaruk-v">varvaruk-v</a> <br> Follow me on <a href="https://github.com/varvaruk-v">GitHub</a> <span></center></b>
+      <center><p><b><span style="font-size: 10pt; color: #c2dceb; font-family: verdana; mso-ansi-language: en-gb">Copyright @2018-2020 <br> Created by <a href="https://github.com/varvaruk-v">varvaruk-v</a> <br> Follow me on <a href="https://github.com/varvaruk-v">GitHub</a> <span></center></b>
 </td></tr>
 </tr></tbody></div></div>
 </table>
